3d print toolbox checks report false positives #51733

Closed
opened 2017-06-07 15:46:01 +02:00 by matali23 · 6 comments

System Information
Windows 7 x64

Blender Version
Broken: 2.78c and 58a434b

Short description of error
When checking a model for 3d print, it reports a lot of overlapping and non-flat faces, although those are flat and not overlaping

Exact steps for others to reproduce the error
Open attached file, click check all, the face is detected as non-flat, even after it was flattened by the flatten operator.
bug flat non flat.blend
bug flat non flat.jpg

**System Information** Windows 7 x64 **Blender Version** Broken: 2.78c and 58a434b **Short description of error** When checking a model for 3d print, it reports a lot of overlapping and non-flat faces, although those are flat and not overlaping **Exact steps for others to reproduce the error** Open attached file, click check all, the face is detected as non-flat, even after it was flattened by the flatten operator. [bug flat non flat.blend](https://archive.blender.org/developer/F624315/bug_flat_non_flat.blend) ![bug flat non flat.jpg](https://archive.blender.org/developer/F624316/bug_flat_non_flat.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @matali23

Added subscriber: @matali23

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-06-08 10:11:17 +02:00

Problem comes from straight loops (those which both edges are aligned and form a straight line) returning normalized (0,0,1) normal instead of face's normal, as stated in BMLoop.calc_normal() doc… will check.

Problem comes from straight loops (those which both edges are aligned and form a straight line) returning normalized (0,0,1) normal instead of face's normal, as stated in BMLoop.calc_normal() doc… will check.

This issue was referenced by blender/blender@c71e160c02

This issue was referenced by blender/blender@c71e160c022abf0cc8425970e31c09ded15763a2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#51733
No description provided.