Fix T51733: 3d print toolbox checks report false positives.

Colinear vertices in a same face would not be handled correctly.